<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vx_background"
    tools:context="com.vaultx.ui.splash.SplashFragment">

    <!-- Shield Logo with Glow -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivShieldLogo"
            android:layout_width="@dimen/splash_logo_size"
            android:layout_height="@dimen/splash_logo_size"
            android:src="@drawable/ic_shield"
            android:contentDescription="VaultX Logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxxl"
            android:text="@string/app_name"
            style="@style/VaultX.Heading.Display"
            android:letterSpacing="0.15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/splash_tagline"
            style="@style/VaultX.Label.Muted" />
    </LinearLayout>

    <!-- Bottom Loading -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="48dp"
            android:layout_height="2dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/vx_cyan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/splash_loading"
            style="@style/VaultX.Label" />
    </LinearLayout>

</FrameLayout>

